refactor to tabulator v5.6.1
align with latest version of tabulator library

--- a/locales/en-US/node.html
+++ b/locales/en-US/node.html
@@ -1,4 +1,4 @@
-<script type="text/x-red" data-help-name="ui_table">
+<script type="text/x-red" data-help-name="dyn_table">
     <p>A Node-RED-Dashboard UI widget node that displays a table of data.</p>
 
     <h3>Inputs</h3>
@@ -18,7 +18,5 @@
     <h3>Details</h3>
     <br>
     <p>JSON Column data is entered into the node, many examples are available at</p>
-    <p>http://tabulator.info</p>
-    <br>
-    <p>Note that theis node will have extra configuration items shortly</p>
+    <p>https://tabulator.info</p>
 </script>
